--- a/localization/ca.json
+++ b/localization/ca.json
@@ -3,12 +3,12 @@
         "Informe d'en/na $NAME\n\n",
         "Has pagat les operacions següents:\n",
         "$OPERATIONS_PAYED",
-        "Has disfrutat de les operacions següents:\n",
+        "Has gaudit de les operacions següents:\n",
         "$OPERATIONS_CONSUMED",
         "Resultant en un balanç de $OPERATION_BALANCE\n\n",
         "Per a restaurar el balanç a zero, has de pagar:\n",
         "$CORRECTIONS_TO_PAY",
-        "i has de rebre::\n",
+        "i has de rebre:\n",
         "$CORRECTIONS_TO_GET"
     ],
     "no_operation" : [
